[gd_scene load_steps=8 format=3 uid="uid://yweu8vinixy8"]

[ext_resource type="Texture2D" uid="uid://bq3jytvyhedgj" path="res://sprites/d_ente_strip6.png" id="1"]
[ext_resource type="Script" path="res://scripts/Humano.gd" id="2"]

[sub_resource type="CircleShape2D" id="1"]
radius = 12.0

[sub_resource type="CircleShape2D" id="2"]
radius = 200.0

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cabeza:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="4"]
resource_name = "idle"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cabeza:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ci883"]
_data = {
"RESET": SubResource("3"),
"idle": SubResource("4")
}

[node name="Humano" type="Node2D"]
script = ExtResource("2")

[node name="Base" type="Area2D" parent="."]

[node name="Coli" type="CollisionShape2D" parent="Base"]
shape = SubResource("1")

[node name="Observador" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="Coli" type="CollisionShape2D" parent="Observador"]
shape = SubResource("2")

[node name="Cuerpo" type="Sprite2D" parent="."]
texture = ExtResource("1")
centered = false
offset = Vector2(-16, -57)
hframes = 6
frame = 3

[node name="Cabeza" type="Sprite2D" parent="."]
texture = ExtResource("1")
centered = false
offset = Vector2(-16, -57)
hframes = 6

[node name="Ojo" type="Sprite2D" parent="Cabeza"]
texture = ExtResource("1")
centered = false
offset = Vector2(-16, -57)
hframes = 6
frame = 1

[node name="Reloj" type="Timer" parent="."]
one_shot = true

[node name="Inicia" type="Timer" parent="."]
one_shot = true

[node name="Anima" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ci883")
}

[connection signal="area_entered" from="Base" to="." method="_on_Base_area_entered"]
[connection signal="area_exited" from="Base" to="." method="_on_Base_area_exited"]
[connection signal="area_entered" from="Observador" to="." method="_on_Observador_area_entered"]
[connection signal="area_exited" from="Observador" to="." method="_on_Observador_area_exited"]
[connection signal="timeout" from="Reloj" to="." method="_on_Reloj_timeout"]
[connection signal="timeout" from="Inicia" to="." method="_on_Inicia_timeout"]
